--- a/package.json
+++ b/package.json
@@ -3,36 +3,40 @@
   "scripts": {
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "gulp-watch": "^5.0.1",
-    "jquery": "^3.4.1",
-    "laravel-elixir-vue-2": "^0.3.0",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "laravel-mix": "^4.0.15",
-    "lodash": "^4.17.15",
-    "vue": "^2.6.10",
-    "vue-loader": "^12.2.1",
-    "vue-resource": "^1.0.3",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "dependencies": {
-    "@simonwep/pickr": "^1.2.0",
+    "@simonwep/pickr": "^1.4.8",
     "@willsoto/vue-pickr": "^0.2.0",
-    "gulp": "^3.9.1",
-    "interactjs": "^1.4.3",
+    "axios": "^0.19",
+    "bootstrap": "^4.1.0",
+    "bootstrap-sass": "^3.4.1",
+    "cross-env": "^5.1",
+    "gulp": "^4.0.2",
+    "gulp-watch": "^5.0.1",
+    "interactjs": "^1.7.2",
+    "jquery": "^3.2",
     "laravel-elixir": "^6.0.0-18",
+    "laravel-elixir-vue-2": "^0.3.0",
+    "laravel-elixir-webpack-official": "^1.0.10",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.13",
     "pickr-widget": "^0.3.6",
-    "v-click-outside": "^2.1.3",
-    "vue-imask": "^4.1.5",
-    "vuedraggable": "^2.21.0"
-  }
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "v-click-outside": "^3.0.0",
+    "vue": "^2.5.17",
+    "vue-imask": "^6.0.0-alpha.0",
+    "vue-loader": "^15.8.3",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuedraggable": "^2.23.2"
+  },
+  "dependencies": {}
 }
