--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "vue-template-compiler": "^2.6.11",
     "vuedraggable": "^2.23.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "file-loader": "^5.0.2",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.0.0",
+    "yarn": "^1.21.1"
+  }
 }
